Fixed visibility transition

--- a/core/app/assets/stylesheets/buttons/sliding_button.scss
+++ b/core/app/assets/stylesheets/buttons/sliding_button.scss
@@ -1,3 +1,5 @@
+$slideTime: 0.3s;
+
 .sliding-button {
   position: relative;
   display: inline-block;
@@ -14,16 +16,18 @@
   line-height: $baseButtonHeight;
   overflow: hidden;
   visibility: hidden;
+  transition: visibility 0 $slideTime;
 }
 
 .sliding-button-open .sliding-button-container-outer {
   visibility: visible;
+  transition: visibility 0 0;
 }
 
 .sliding-button-container-inner {
   position: relative;
   right: -100%;
-  transition: right 0.3s;
+  transition: right $slideTime;
 }
 
 .sliding-button-open .sliding-button-container-inner {
